fixed extra space on right side of site

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,9 @@ body {
   font-family: 'Montserrat', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /* background-color: red; */
+  width: 100%;
+  overflow-x: hidden; 
 }
 
 code {
